--- a/admin/admin-report.html
+++ b/admin/admin-report.html
@@ -1,53 +1,10 @@
 <?php 
     session_start();
-    $page = 'registration';
+    $page = 'admin-report';
     include('header.html');
 ?>
-
-
-
-<div class="" id="dashboard">
-    <aside>
-        <div class="close font-weight-bold" id="close-btn">
-            <span class="material-symbols-sharp">close</span>
-        </div>
-
-        <div class="sidebar">
-            <a href="./admin-dashboard.html">
-                <span class="material-symbols-sharp">dashboard</span>
-                <h4 class="" id="items-dashboard">Dashboard</h4>
-            </a>
-            <a href="./admin-citizen.html">
-                <span class="material-symbols-sharp">person</span>
-                <h4 class="" id="items-dashboard">Citizens</h4>
-            </a>
-            <a href="./admin-message-inbox.html">
-                <span class="material-symbols-sharp">chat</span>
-                <h4 class="" id="items-dashboard">Messages</h4>
-            </a>
-            <a href="#" class="active">
-                <span class="material-symbols-sharp">report</span>
-                <h4 class="" id="items-dashboard">Reports</h4>
-            </a>
-            <a href="#">
-                <span class="material-symbols-sharp">settings</span>
-                <h4 class="" id="items-dashboard">Settings</h4>
-            </a>
-            <a href="#">
-                <span class="material-symbols-sharp">logout</span>
-                <h4 class="" id="items-dashboard">Logout</h4>
-            </a>
-        </div>
-    </aside>
-     <!-------------------------------------------END OF ASIDE-------------------------------------------->
      <main>
         <h2 class="">Reports</h2>
-
-        <div class="date-dashboard">
-            <input type="date">
-        </div>
-
-     
         <!-- REPORTS -->
         <div class="report">
                 <table>
