--- a/home.html
+++ b/home.html
@@ -16,12 +16,11 @@
     <div class="container">
         <h1>Edit your account</h1>
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">PWD</h5>
                 <p class="card-text">Set an appointment to confirm your documents.</p>
-                <a href="#" class="btn btn-primary">Set an Appointment</a>
-                <a href="#" class="btn btn-secondary">Edit</a>
+                <a href="contact-us.html" class="btn btn-primary">Set an Appointment</a>
+                <a href="template/pwd-registration.html" class="btn btn-secondary">Edit</a>
             </div>
         </div>
     </div>
