--- a/test/test2.html
+++ b/test/test2.html
@@ -148,10 +148,9 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script>
-      $(window).load(function()
-      {
-          $('#staticBackdrop').modal('show');
-      });
+      $('#login').click(function() {
+	$("#disable").removeClass(".disableDiv");
+})
     </script>
   </body>
 </html>
