--- a/header.html
+++ b/header.html
@@ -25,7 +25,8 @@
       crossorigin="anonymous"
     ></script>
     <!-- External Javascript -->
-    <script type="text/javascript" src="includes/funtion.inc.js"></script>
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script type="text/javascript" defer src="includes/funtion.inc.js"></script>
     <!-- Tab Icon -->
     <link rel="shortcut icon" href="images/santarosa-logo.ico" type="image/x-icon">
     <!-- Material Icon -->
