--- a/sign-up.html
+++ b/sign-up.html
@@ -3,50 +3,97 @@
   $page = "sign_up";
   include('header.html');
 ?>
+<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+  <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+  </symbol>
+  <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+  </symbol>
+  <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+  </symbol>
+</svg>
 <section>
   <div class="container mt-4 text-center" id="signup-container">
     <form id="signup-form" action="includes/sign-up.inc.php" method="post">
       <div class="display-5 mt-4 mb-4 text-white">Sign up</div>
-      <input class="form-control mt-2" type="text" id="SLastName" name="SLastName" placeholder="Last Name" required autofocus/>
-      <input class="form-control mt-2" type="text" id="SSuffix" name="SSuffix" placeholder="Suffix"/>
-      <input class="form-control mt-2" type="text" id="SFirstName" name="SFirstName" placeholder="First Name" required />
-      <input class="form-control mt-2" type="text" id="SMiddleName" name="SMiddleName" placeholder="Middle Name"/>
+      <input class="form-control mt-2" type="text" id="SLastName" name="SLastName" placeholder="Last Name" onkeypress="return alpha(event);" required autofocus/>
+      <input class="form-control mt-2" type="text" id="SFirstName" name="SFirstName" placeholder="First Name" onkeypress="return alpha(event);" required />
+      <input class="form-control mt-2" type="text" id="SMiddleName" name="SMiddleName" placeholder="Middle Name" onkeypress="return alpha(event);"/>
+      <input class="form-control mt-2" type="text" id="SSuffix" name="SSuffix" placeholder="Suffix" onkeypress="return alpha(event);"/>
       <input class="form-control mt-2" type="text" id="SEmail" name="SEmail" placeholder="Email Account" required />
       <input class="form-control mt-2" type="password" id="SPassword" name="SPassword" placeholder="Password" required />
       <input class="form-control mt-2" type="password" id="SConfirmPassword" name="SConfirmPassword" placeholder="Confirm Password" required />
       <div class="g-recaptcha mt-2 mb-2" data-sitekey="6LfVLT4gAAAAADdM5VWP-MuEDD4FVtcMB1gIZQve"></div>
       <input class="btn btn-lg btn-primary w-100" type="submit" id="submit" name="submit" value="Submit">
+      <?php
+        if (isset($_GET["username"])) {
+            $username = $_GET['username'];
+        }
+        if (isset($_GET["error"])) {
+            if ($_GET["error"] == "userexists"){
+              echo "<div class='alert alert-danger d-flex align-items-center alert-dismissible fade show' role='alert'>
+                      <svg class='bi flex-shrink-0 me-2' width='24' height='24' role='img' aria-label='Danger:'><use xlink:href='#exclamation-triangle-fill'/></svg>
+                      <div>
+                        User Already Existing.
+                      </div>
+                      <button type='button' class='btn-close' data-bs-dismiss='alert' aria-label='Close'></button>
+                    </div>";
+            }
+            else if ($_GET["error"] == "invalidemail"){
+              echo "<div class='alert alert-danger d-flex align-items-center alert-dismissible fade show' role='alert'>
+                      <svg class='bi flex-shrink-0 me-2' width='24' height='24' role='img' aria-label='Danger:'><use xlink:href='#exclamation-triangle-fill'/></svg>
+                      <div>
+                        Invalid Email.
+                      </div>
+                      <button type='button' class='btn-close' data-bs-dismiss='alert' aria-label='Close'></button>
+                    </div>";
+            }
+            else if ($_GET["error"] == "emailtaken"){
+              echo "<div class='alert alert-danger d-flex align-items-center alert-dismissible fade show' role='alert'>
+                      <svg class='bi flex-shrink-0 me-2' width='24' height='24' role='img' aria-label='Danger:'><use xlink:href='#exclamation-triangle-fill'/></svg>
+                      <div>
+                        Email already Taken.
+                      </div>
+                      <button type='button' class='btn-close' data-bs-dismiss='alert' aria-label='Close'></button>
+                    </div>";
+            }
+            else if ($_GET["error"] == "passwordnotmatch"){
+              echo "<div class='alert alert-danger d-flex align-items-center alert-dismissible fade show' role='alert'>
+                      <svg class='bi flex-shrink-0 me-2' width='24' height='24' role='img' aria-label='Danger:'><use xlink:href='#exclamation-triangle-fill'/></svg>
+                      <div>
+                        Password not Match.
+                      </div>
+                      <button type='button' class='btn-close' data-bs-dismiss='alert' aria-label='Close'></button>
+                    </div>";
+            }
+            else if ($_GET["error"] == "wrongcaptcha"){
+              echo "<div class='alert alert-danger d-flex align-items-center alert-dismissible fade show' role='alert'>
+                      <svg class='bi flex-shrink-0 me-2' width='24' height='24' role='img' aria-label='Danger:'><use xlink:href='#exclamation-triangle-fill'/></svg>
+                      <div>
+                        Wrong Captcha
+                      </div>
+                      <button type='button' class='btn-close' data-bs-dismiss='alert' aria-label='Close'></button>
+                    </div>";
+            } 
+            else if ($_GET["error"] == "stmterror"){
+              echo "<div class='alert alert-danger d-flex align-items-center alert-dismissible fade show' role='alert'>
+                      <svg class='bi flex-shrink-0 me-2' width='24' height='24' role='img' aria-label='Danger:'><use xlink:href='#exclamation-triangle-fill'/></svg>
+                      <div>
+                        Something Went Wrong.
+                      </div>
+                      <button type='button' class='btn-close' data-bs-dismiss='alert' aria-label='Close'></button>
+                    </div>";
+            }
+            else if ($_GET["error"] == "none"){
+              echo "<script>alert('Your Username is $username')</script>";
+            } 
+        }
+      ?>
     </form>
   </div>
 </section>
-<?php
-  if (isset($_GET["username"])) {
-      $username = $_GET['username'];
-  }
-  if (isset($_GET["error"])) {
-      if ($_GET["error"] == "userexists"){
-        echo "<script>alert('User already Existing')</script>";
-      }
-      else if ($_GET["error"] == "invalidemail"){
-        echo "<script>alert('Invalid Email')</script>";
-      }
-      else if ($_GET["error"] == "emailtaken"){
-        echo "<script>alert('Email is not available')</script>";
-      }
-      else if ($_GET["error"] == "passwordnotmatch"){
-        echo "<script>alert('Password Not Match')</script>";
-      }
-      else if ($_GET["error"] == "wrongcaptcha"){
-        echo "<script>alert('Wrong Captcha')</script>";
-      } 
-      else if ($_GET["error"] == "stmterror"){
-        echo "<script>alert('Something Went Wrong')</script>";
-      }
-      else if ($_GET["error"] == "none"){
-        echo "<script>alert('Your Username is $username')</script>";
-      } 
-  }
-?>
 <?php 
     include('footer.html');
 ?>
