--- a/registration.html
+++ b/registration.html
@@ -179,7 +179,7 @@
                     </div>
                     <div class="col border1 m-1">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" value="RENEWAL ID" id="renewal-id" name="idType">
+                            <input class="form-check-input" type="radio" value="Renewal ID" id="renewal-id" name="idType">
                             <label class="form-check-label" for="renewal-id">
                                 RENEWAL ID
                             </label>
@@ -187,7 +187,7 @@
                     </div>
                     <div class="col border1 m-1">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" value="LOST ID" id="lost-id" name="idType">
+                            <input class="form-check-input" type="radio" value="Lost ID" id="lost-id" name="idType">
                             <label class="form-check-label" for="lost-id">
                                 LOST ID
                             </label>
@@ -195,7 +195,7 @@
                     </div>
                     <div class="col border1 m-1">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" value="TRANSFER" id="transfer" name="idType">
+                            <input class="form-check-input" type="radio" value="Transfer" id="transfer" name="idType">
                             <label class="form-check-label" for="transfer">
                                 TRANSFER
                             </label>
@@ -204,7 +204,7 @@
                     </div>
                     <div class="col border1 m-1">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" value="CHANGE INFO" id="change-info" name="idType">
+                            <input class="form-check-input" type="radio" value="Change Information" id="change-info" name="idType">
                             <label class="form-check-label" for="change-info">
                                 CHANGE INFO
                             </label>
