--- a/index.html
+++ b/index.html
@@ -8,28 +8,31 @@
   }
 ?>
 <section>
-  <div class="text-center mt-4" id="login-container">
-    <form id="login-form" action="includes/login.inc.php" method="post">
+  <div class="text-center mt-4 container" id="login-container" style="max-width: 40vh;">
+    <form  action="includes/login.inc.php" method="post">
       <h1 class="mt-4 mb-4 text-white">Login</h1>
-      <div class="mb-3">
+      <div class="mb-1">
         <input type="text" class="form-control" id="UUsername" name="UUsername" placeholder="Username/Email..." required autofocus>
       </div>
-      <div class="mb-3">
+      <div class="mb-1">
         <input type="password" class="form-control" id="UPassword" name="UPassword" placeholder="Password..." required>
       </div>
-      <div class="mt-3 mb-3">
+      <div class="mb-1">
         <input type="submit" id="submit" name="submit" class="btn btn-lg btn-primary w-100"/>
       </div>
+      <div class="mb-3">
+        <a style='color: rgb(35, 69, 223); font-size: 15px' href="reset-password.html">Forgot Password?</a>
+      </div>
+      <hr>
       <a href="sign-up.html" class="btn btn-success">Create Account</a>
       <div class="mt-3 mb-3">
         <?php
           if (isset($_GET["error"])) {
               if ($_GET["error"] == "wrongaccount"){
-                  echo "<p style='color: red; font-size: 15px'>The username or email you entered isn’t connected to an account. 
-                    <a href='sign-up.html' style='color: red; font-size: 15px'>Create a new account.</a></p>";
+                  echo "<p style='font-size: 15px'>The username or email you entered isn’t connected to an account. <a href='sign-up.html' style='color: red; font-size: 15px'>Create a new account.</a></p>";
               }
               else if ($_GET["error"] == "wrongpassword"){
-                  echo "<p>The password you’ve entered is incorrect.</p>";
+                  echo "<p>The password you’ve entered is incorrect. <a style='color: red; font-size: 15px' href='reset-password.html'>Forgot Password?</a></p>";
               }   
           }
       ?>
