--- a/sign-up.html
+++ b/sign-up.html
@@ -15,8 +15,8 @@
   </symbol>
 </svg>
 <section>
-  <div class="container mt-4 text-center" id="signup-container">
-    <form id="signup-form" action="includes/sign-up.inc.php" method="post">
+  <div class="container mt-4 text-center" id="signup-container" style="max-width: 40vh;">
+    <form action="includes/sign-up.inc.php" method="post">
       <div class="display-5 mt-4 mb-4 text-white">Sign up</div>
       <input class="form-control mt-2" type="text" id="SLastName" name="SLastName" placeholder="Last Name" onkeypress="return alpha(event);" required autofocus/>
       <input class="form-control mt-2" type="text" id="SFirstName" name="SFirstName" placeholder="First Name" onkeypress="return alpha(event);" required />
