--- a/footer.html
+++ b/footer.html
@@ -4,31 +4,13 @@
         <!-- Section: Social media -->
         <div class="mb-4">
           <!-- About Us -->
-          <a
-            class="btn btn-primary btn-floating m-1"
-            style="background-color: #3b5998;"
-            href="about-us.html"
-            role="button"
-            ><i class="fab fa-facebook-f"></i
-          >About Us</a>
+          <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998;" href="about-us.html" role="button"><i class="fab fa-facebook-f"></i>About Us</a>
 
           <!-- Contact Us -->
-          <a
-            class="btn btn-primary btn-floating m-1"
-            style="background-color: #55acee;"
-            href="contact-us.html"
-            role="button"
-            ><i class="fab fa-twitter"></i
-          >Contact Us</a>
+          <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee;" href="contact-us.html" role="button"><i class="fab fa-twitter"></i>Contact Us</a>
 
           <!-- Privacy Policy -->
-          <a
-            class="btn btn-primary btn-floating m-1"
-            style="background-color: #dd4b39;"
-            href="privacy-and-policy.html"
-            role="button"
-            ><i class="fab fa-google"></i
-          >Privacy Policy</a>
+          <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39;" href="privacy-and-policy.html" role="button"><i class="fab fa-google"></i>Privacy Policy</a>
           <!-- Copyright -->
           <div>© 2022 Copyright: PUP Santa Rosa Campus</div>
           <!-- Copyright -->
